--- a/promotion.html
+++ b/promotion.html
@@ -87,143 +87,259 @@
             </div>
         </div>
     </header>
-    <section style="height: 100vh;"></section>
+    <section id="options">
+        <div class="grid-container">
+            <div class="options">
+                    <button class="btn1">Tout</button>
+                    <button>Haut-Standing</button>
+                    <button>Logements sociaux</button>
+                    <button>Centres commerciaux</button>
+            </div>
+        </div>
+    </section>
     <section id="exemples">
         <div class="grid-container">
-            <div class="exemple">
-                <div class="image"><img src="./assets/images/maison_du_lac.png" alt=""></div>
-                <div class="titre">
-                    <h6>Les maisons du lac</h6>
-                </div>
-                <div class="infos">
-                    <div class="particularites">
-                        <div class="utilitaire">
-                            <span><img src="./assets/images/room.svg" alt=""></span>
-                            <span>4</span>
+            <div class="container">
+                <div class="exemple">
+                    <div class="image"><img src="./assets/images/maison_du_lac.png" alt=""></div>
+                    <div class="titre">
+                        <h6>Les maisons du lac</h6>
+                    </div>
+                    <div class="infos">
+                        <div class="particularites">
+                            <div class="utilitaire">
+                                <span><img src="./assets/images/room.svg" alt=""></span>
+                                <h6>4</h6>
+                            </div>
+                            <div class="utilitaire">
+                                <span><img src="./assets/images/parking.svg" alt=""></span>
+                                <h6>5</h6>
+                            </div>
+                            <div class="utilitaire">
+                                <span><img src="./assets/images/pool.svg" alt=""></span>
+                                <h6>2</h6>
+                            </div>
+                            <div class="utilitaire">
+                                <span><img src="./assets/images/sport.svg" alt=""></span>
+                                <h6>2</h6>
+                            </div>
                         </div>
-                        <div class="utilitaire">
-                            <span><img src="./assets/images/parking.svg" alt=""></span>
-                            <span>5</span>
-                        </div>
-                        <div class="utilitaire">
-                            <span><img src="./assets/images/pool.svg" alt=""></span>
-                            <span>2</span>
-                        </div>
-                        <div class="utilitaire">
-                            <span><img src="./assets/images/sport.svg" alt=""></span>
-                            <span>2</span>
+                        <div class="details"><a href="">Voir détails <svg width="6" height="10" viewBox="0 0 6 10"
+                                    fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M1 8.52997L4.52 4.99997L1 1.46997" stroke="#3B474F" stroke-width="1.5"
+                                        stroke-linecap="round" stroke-linejoin="round" />
+                                </svg>
+                            </a>
                         </div>
                     </div>
-                    <div class="details"><a href="">Voir détails <svg width="6" height="10" viewBox="0 0 6 10"
-                                fill="none" xmlns="http://www.w3.org/2000/svg">
-                                <path d="M1 8.52997L4.52 4.99997L1 1.46997" stroke="#3B474F" stroke-width="1.5"
-                                    stroke-linecap="round" stroke-linejoin="round" />
-                            </svg>
-                        </a>
+                </div>
+                <div class="exemple">
+                    <div class="image"><img src="./assets/images/et_tortor.png" alt=""></div>
+                    <div class="titre">
+                        <h6>Et tortor sagittis ut</h6>
+                    </div>
+                    <div class="infos">
+                        <div class="particularites">
+                            <div class="utilitaire">
+                                <span><img src="./assets/images/room.svg" alt=""></span>
+                                <h6>4</h6>
+                            </div>
+                            <div class="utilitaire">
+                                <span><img src="./assets/images/parking.svg" alt=""></span>
+                                <h6>5</h6>
+                            </div>
+                            <div class="utilitaire">
+                                <span><img src="./assets/images/pool.svg" alt=""></span>
+                                <h6>2</h6>
+                            </div>
+                            <div class="utilitaire">
+                                <span><img src="./assets/images/sport.svg" alt=""></span>
+                                <h6>2</h6>
+                            </div>
+                        </div>
+                        <div class="details"><a href="">Voir détails <svg width="6" height="10" viewBox="0 0 6 10"
+                                    fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M1 8.52997L4.52 4.99997L1 1.46997" stroke="#3B474F" stroke-width="1.5"
+                                        stroke-linecap="round" stroke-linejoin="round" />
+                                </svg>
+                            </a>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="exemple">
-                <div class="image"><img src="./assets/images/et_tortor.png" alt=""></div>
-                <div class="titre">
-                    <h6>Et tortor sagittis ut</h6>
-                </div>
-                <div class="infos">
-                    <div class="particularites">
-                        <div class="utilitaire">
-                            <span><img src="./assets/images/room.svg" alt=""></span>
-                            <span>4</span>
+                <div class="exemple">
+                    <div class="image"><img src="./assets/images/dui_nunc.png" alt=""></div>
+                    <div class="titre">
+                        <h6>Dui nunc eget magnis</h6>
+                    </div>
+                    <div class="infos">
+                        <div class="particularites">
+                            <div class="utilitaire">
+                                <span><img src="./assets/images/room.svg" alt=""></span>
+                                <h6>4</h6>
+                            </div>
+                            <div class="utilitaire">
+                                <span><img src="./assets/images/parking.svg" alt=""></span>
+                                <h6>5</h6>
+                            </div>
+                            <div class="utilitaire">
+                                <span><img src="./assets/images/pool.svg" alt=""></span>
+                                <h6>2</h6>
+                            </div>
+                            <div class="utilitaire">
+                                <span><img src="./assets/images/sport.svg" alt=""></span>
+                                <h6>2</h6>
+                            </div>
                         </div>
-                        <div class="utilitaire">
-                            <span><img src="./assets/images/parking.svg" alt=""></span>
-                            <span>5</span>
-                        </div>
-                        <div class="utilitaire">
-                            <span><img src="./assets/images/pool.svg" alt=""></span>
-                            <span>2</span>
-                        </div>
-                        <div class="utilitaire">
-                            <span><img src="./assets/images/sport.svg" alt=""></span>
-                            <span>2</span>
+                        <div class="details"><a href="">Voir détails <svg width="6" height="10" viewBox="0 0 6 10"
+                                    fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M1 8.52997L4.52 4.99997L1 1.46997" stroke="#3B474F" stroke-width="1.5"
+                                        stroke-linecap="round" stroke-linejoin="round" />
+                                </svg>
+                            </a>
                         </div>
                     </div>
-                    <div class="details"><a href="">Voir détails <svg width="6" height="10" viewBox="0 0 6 10"
-                                fill="none" xmlns="http://www.w3.org/2000/svg">
-                                <path d="M1 8.52997L4.52 4.99997L1 1.46997" stroke="#3B474F" stroke-width="1.5"
-                                    stroke-linecap="round" stroke-linejoin="round" />
-                            </svg>
-                        </a>
-                    </div>
                 </div>
-            </div>
-            <div class="exemple">
-                <div class="image"><img src="./assets/images/dui_nunc.png" alt=""></div>
-                <div class="titre">
-                    <h6>Dui nunc eget magnis</h6>
-                </div>
-                <div class="infos">
-                    <div class="particularites">
-                        <div class="utilitaire">
-                            <span><img src="./assets/images/room.svg" alt=""></span>
-                            <span>4</span>
-                        </div>
-                        <div class="utilitaire">
-                            <span><img src="./assets/images/parking.svg" alt=""></span>
-                            <span>5</span>
-                        </div>
-                        <div class="utilitaire">
-                            <span><img src="./assets/images/pool.svg" alt=""></span>
-                            <span>2</span>
-                        </div>
-                        <div class="utilitaire">
-                            <span><img src="./assets/images/sport.svg" alt=""></span>
-                            <span>2</span>
-                        </div>
+                <div class="exemple">
+                    <div class="image"><img src="./assets/images/leo_gravida.png" alt=""></div>
+                    <div class="titre">
+                        <h6>Leo gravida at nunc</h6>
                     </div>
-                    <div class="details"><a href="">Voir détails <svg width="6" height="10" viewBox="0 0 6 10"
-                                fill="none" xmlns="http://www.w3.org/2000/svg">
-                                <path d="M1 8.52997L4.52 4.99997L1 1.46997" stroke="#3B474F" stroke-width="1.5"
-                                    stroke-linecap="round" stroke-linejoin="round" />
-                            </svg>
-                        </a>
-                    </div>
-                </div>
-            </div>
-            <div class="exemple">
-                <div class="image"><img src="./assets/images/leo_gravida.png" alt=""></div>
-                <div class="titre">
-                    <h6>Leo gravida at nunc</h6>
-                </div>
-                <div class="infos">
-                    <div class="particularites">
-                        <div class="utilitaire">
-                            <span><img src="./assets/images/room.svg" alt=""></span>
-                            <span>4</span>
+                    <div class="infos">
+                        <div class="particularites">
+                            <div class="utilitaire">
+                                <span><img src="./assets/images/room.svg" alt=""></span>
+                                <h6>4</h6>
+                            </div>
+                            <div class="utilitaire">
+                                <span><img src="./assets/images/parking.svg" alt=""></span>
+                                <h6>5</h6>
+                            </div>
+                            <div class="utilitaire">
+                                <span><img src="./assets/images/pool.svg" alt=""></span>
+                                <h6>2</h6>
+                            </div>
+                            <div class="utilitaire">
+                                <span><img src="./assets/images/sport.svg" alt=""></span>
+                                <h6>2</h6>
+                            </div>
                         </div>
-                        <div class="utilitaire">
-                            <span><img src="./assets/images/parking.svg" alt=""></span>
-                            <span>5</span>
+                        <div class="details"><a href="">Voir détails <svg width="6" height="10" viewBox="0 0 6 10"
+                                    fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M1 8.52997L4.52 4.99997L1 1.46997" stroke="#3B474F" stroke-width="1.5"
+                                        stroke-linecap="round" stroke-linejoin="round" />
+                                </svg>
+                            </a>
                         </div>
-                        <div class="utilitaire">
-                            <span><img src="./assets/images/pool.svg" alt=""></span>
-                            <span>2</span>
-                        </div>
-                        <div class="utilitaire">
-                            <span><img src="./assets/images/sport.svg" alt=""></span>
-                            <span>2</span>
-                        </div>
-                    </div>
-                    <div class="details"><a href="">Voir détails <svg width="6" height="10" viewBox="0 0 6 10"
-                                fill="none" xmlns="http://www.w3.org/2000/svg">
-                                <path d="M1 8.52997L4.52 4.99997L1 1.46997" stroke="#3B474F" stroke-width="1.5"
-                                    stroke-linecap="round" stroke-linejoin="round" />
-                            </svg>
-                        </a>
                     </div>
                 </div>
             </div>
         </div>
     </section>
+    <footer>
+        <div class="footer">
+            <div class="grid-container">
+                <div class="grid-footer">
+                    <div class="contacts">
+                        <div class="logo">
+                            <img src="./assets/images/logo (3).png" alt="">
+                        </div>
+                        <div class="contact">
+                            <div class="icons"><img src="./assets/images/contact1.svg" alt=""></div>
+                            <div class="number"><a href="tel:+221338893535">(+221) 33 889 35 35</a></div>
+                        </div>
+                        <div class="contact">
+                            <div class="icons"><img src="./assets/images/contact1.svg" alt=""></div>
+                            <div class="number"><a href="tel:+338893099">(+221) 33 889 30 99</a></div>
+                        </div>
+                        <div class="contact">
+                            <div class="icons"><img src="./assets/images/contact2.svg" alt=""></div>
+                            <div class="number"><a href="tel:+221338672675">(+221) 33 867 26 75</a></div>
+                        </div>
+                        <div class="mail">
+                            <div class="icons"><img src="./assets/images/mail.svg" alt=""></div>
+                            <div class="email"><a href="mailto:infos@socabeg.com">infos@socabeg.com</a></div>
+                        </div>
+                        <div class="location">
+                            <div class="icons"><img src="./assets/images/location.svg" alt=""></div>
+                            <div class="location"><a href="https://maps.app.goo.gl/rt5T6APaUmLifVqF8"
+                                    target="_blank">Fann-Hock - Corniche, Face Cour Suprême, BP 1270 Dakar,
+                                    Sénégal</a></div>
+                        </div>
+                    </div>
+                    <div class="links">
+                        <div class="titre">
+                            <h5>Liens utiles</h5>
+                        </div>
+                        <div class="content">
+                            <a href="">
+                                <p>PROMOTION IMMOBILIERE</p>
+                            </a>
+                            <a href="">
+                                <p>BTP</p>
+                            </a>
+                            <a href="">
+                                <p>MINES</p>
+                            </a>
+                            <a href="">
+                                <p>CONTACT</p>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="about">
+                        <div class="titre">
+                            <h5>A propos</h5>
+                        </div>
+                        <div class="content">
+                            <a href="">
+                                <p>A PROPOS</p>
+                            </a>
+                            <a href="">
+                                <p>PRESS</p>
+                            </a>
+                            <a href="">
+                                <p>NOUS REJOINDRE</p>
+                            </a>
+                            <a href="">
+                                <p>PARTICULIERS</p>
+                            </a>
+                            <a href="">
+                                <p>COOPERATIVES</p>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="newsletter">
+                        <div class="entete">
+                            <h5>Newsletter</h5>
+                        </div>
+                        <div class="paragraph">
+                            <h6>Inscrivez-vous à notre infolettre pour être informé de tous nos opportinuités</h6>
+                        </div>
+                        <div class="form">
+                            <div class="input">
+                                <div class="mail"><img src="./assets/images/emaiil.svg" alt=""></div>
+                                <div><input type="email" name="mail" id="mail" placeholder="example@mail.com"></div>
+                            </div>
+                            <button>Subscrib</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="autres">
+            <div class="licence">
+                <h6>©2022 - Socabeg | Tout droits réservés</h6>
+            </div>
+            <div class="socials">
+                <div class="linkedin"><a href=""><img src="./assets/images/linkedin.svg" alt=""></a></div>
+                <div class="facebook"><a href=""><img src="./assets/images/facebook.svg" alt=""></a></div>
+                <div class="twitter"><a href=""><img src="./assets/images/twitter.svg" alt=""></a></div>
+            </div>
+            <div class="donnees">
+                <h6>CGU</h6>
+                <h6>Cookies</h6>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
